rsolid/src/shape/snapshots/rsolid__shape__triangle__right_test.snap
---
source: rsolid/src/shape/triangle.rs
expression: "right(100.0, 200.0)"
---
function _v0() = [100,200];
module _v1() { square(size=_v0()); }
function _v2() = [400,400];
module _v3() { square(size=_v2()); }
module _v4 (a=0) { rotate([0, 0, a]) children(); }
function _v5() = 63.43494882292201;
module _v6() { _v4(a=_v5()) children(); }
module _v7() { _v6() _v3(); }
module _v8() { difference() { _v1(); _v7(); }; }
module _v9 (y=undef) { translate([0, -y, 0]) children(); }
function _v10() = 100;
module _v11() { _v9(y=_v10()) children(); }
module _v12() { _v11() _v8(); }
module _v13 (x=undef) { translate([-x, 0, 0]) children(); }
function _v14() = 50;
module _v15() { _v13(x=_v14()) children(); }
module _v16() { _v15() _v12(); }
function _v17() = [1,0,0];
module _v18() { mirror(v=_v17()) children(); }
module _v19() { _v18() _v16(); }

_v19();
